--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "@sandstreamdev/react-swipeable-list": "^0.6.1",
     "axios": "^0.18.0",
+    "rc-swipeout": "^2.0.11",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-masonry-component": "^6.2.1",
